force-app/main/default/objects/Lead/fields/contact_email__c.field-meta.xml
<CustomField>
    <fullName>contact_email__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>