force-app/main/default/objects/Lead/fields/Description_of_parts__c.field-meta.xml
<CustomField>
    <fullName>Description_of_parts__c</fullName>
    <label>Description of parts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>