force-app/main/default/objects/Lead/fields/FirstName_Formula__c.field-meta.xml
<CustomField>
    <fullName>FirstName_Formula__c</fullName>
    <formula>FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstName Formula</label>
    <type>Text</type>
</CustomField>