force-app/main/default/objects/Lead/fields/Is_lead_converted__c.field-meta.xml
<CustomField>
    <fullName>Is_lead_converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_lead_converted</label>
    <type>Checkbox</type>
</CustomField>