force-app/main/default/objects/Lead/fields/Joint_Applicant_Account_Types_First_Bank__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Account_Types_First_Bank__c</fullName>
    <label>Joint Applicant Account Types First Bank</label>
    <length>200</length>
    <type>Text</type>
</CustomField>