force-app/main/default/objects/Lead/fields/Joint_Applicant_Comments_Questions__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Comments_Questions__c</fullName>
    <label>Joint Applicant Comments/Questions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>