force-app/main/default/objects/Lead/fields/Joint_Applicant_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Employer_Name__c</fullName>
    <label>Joint Applicant Employer Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>