force-app/main/default/objects/Lead/fields/Joint_Applicant_Employer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Employer_Phone__c</fullName>
    <label>Joint Applicant Employer Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>