force-app/main/default/objects/Lead/fields/Joint_Applicant_Employer_State__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Employer_State__c</fullName>
    <label>Joint Applicant Employer State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>