force-app/main/default/objects/Lead/fields/Joint_Applicant_Initial_Here__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Initial_Here__c</fullName>
    <label>Joint Applicant Initial Here</label>
    <length>20</length>
    <type>Text</type>
</CustomField>