force-app/main/default/objects/Lead/fields/Joint_Applicant_Middle_Names__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Middle_Names__c</fullName>
    <label>Joint Applicant Middle Names</label>
    <length>200</length>
    <type>Text</type>
</CustomField>