force-app/main/default/objects/Lead/fields/Joint_Applicant_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Mobile_Phone__c</fullName>
    <label>Joint Applicant Mobile Phone</label>
    <type>Phone</type>
</CustomField>