force-app/main/default/objects/Lead/fields/Joint_Applicant_Name_of_2nd_Bank__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Name_of_2nd_Bank__c</fullName>
    <label>Joint Applicant Name of 2nd Bank</label>
    <length>200</length>
    <type>Text</type>
</CustomField>