force-app/main/default/objects/Lead/fields/Joint_Applicant_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Occupation__c</fullName>
    <label>Joint Applicant Occupation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>