force-app/main/default/objects/Lead/fields/Joint_Applicant_Other_Income__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Other_Income__c</fullName>
    <label>Joint Applicant Other Income</label>
    <length>20</length>
    <type>Text</type>
</CustomField>