force-app/main/default/objects/Lead/fields/Joint_Applicant_Previous_Address_Years__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Previous_Address_Years__c</fullName>
    <label>Joint Applicant Previous Address Years</label>
    <length>4</length>
    <type>Text</type>
</CustomField>