force-app/main/default/objects/Lead/fields/Joint_Applicant_Previous_City__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Previous_City__c</fullName>
    <label>Joint Applicant Previous City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>