force-app/main/default/objects/Lead/fields/Joint_Applicant_Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Property_Owner__c</fullName>
    <label>Joint Applicant Property Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>