force-app/main/default/objects/Lead/fields/Joint_Applicant_Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Social_Security_Number__c</fullName>
    <label>Joint Applicant Social Security Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>