force-app/main/default/objects/Lead/fields/Joint_Applicant_Years_at_Employer__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Years_at_Employer__c</fullName>
    <label>Joint Applicant Years at Employer</label>
    <length>4</length>
    <type>Text</type>
</CustomField>