force-app/main/default/objects/Lead/fields/Joint_Applicant_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Joint_Applicant_Zip_Postal_Code__c</fullName>
    <label>Joint Applicant Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>