force-app/main/default/objects/Lead/fields/LastName_Formula__c.field-meta.xml
<CustomField>
    <fullName>LastName_Formula__c</fullName>
    <formula>LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastName Formula</label>
    <type>Text</type>
</CustomField>