force-app/main/default/objects/Lead/fields/Lead_Source_Formula__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Formula__c</fullName>
    <formula>TEXT(LeadSource)</formula>
    <label>Lead Source Formula</label>
    <type>Text</type>
</CustomField>