force-app/main/default/objects/Lead/fields/Parts_Request_City__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request_City__c</fullName>
    <label>Parts Request - City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>