force-app/main/default/objects/Lead/fields/Parts_Request_Required_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request_Required_Part_Number__c</fullName>
    <label>Parts Request - Required Part Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>