force-app/main/default/objects/Lead/fields/Parts_Request_Your_Boat_Year__c.field-meta.xml
<CustomField>
    <fullName>Parts_Request_Your_Boat_Year__c</fullName>
    <label>Parts Request - Your Boat Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>