force-app/main/default/objects/Lead/fields/Required_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Required_Part_Number__c</fullName>
    <label>Required Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>