force-app/main/default/objects/Lead/fields/Schedule_Ride_Boat_you_want_to_drive__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Ride_Boat_you_want_to_drive__c</fullName>
    <label>Schedule Ride - Boat you want to drive</label>
    <length>200</length>
    <type>Text</type>
</CustomField>