force-app/main/default/objects/Lead/fields/Service_Request_Have_we_serviced_befor__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Have_we_serviced_befor__c</fullName>
    <label>Service Request - Have we serviced befor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>