force-app/main/default/objects/Lead/fields/Service_Request_Last_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Last_Service_Date__c</fullName>
    <label>Service Request - Last Service Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>