force-app/main/default/objects/Lead/fields/Service_Request_Preferred_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Preferred_Appointment__c</fullName>
    <label>Service Request - Preferred Appointment</label>
    <length>200</length>
    <type>Text</type>
</CustomField>