force-app/main/default/objects/Lead/fields/Service_Request_Your_Boat_Engine_Hours__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Your_Boat_Engine_Hours__c</fullName>
    <label>Service Request - Your Boat Engine Hours</label>
    <length>20</length>
    <type>Text</type>
</CustomField>