force-app/main/default/objects/Lead/fields/Service_Request_Your_Boat_Model__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Your_Boat_Model__c</fullName>
    <label>Service Request - Your Boat Model</label>
    <length>200</length>
    <type>Text</type>
</CustomField>