force-app/main/default/objects/Lead/fields/SFA_City__c.field-meta.xml
<CustomField>
    <fullName>SFA_City__c</fullName>
    <label>SFA - City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>