force-app/main/default/objects/Lead/fields/SFA_Condition__c.field-meta.xml
<CustomField>
    <fullName>SFA_Condition__c</fullName>
    <label>SFA - Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>