force-app/main/default/objects/Lead/fields/SFA_County__c.field-meta.xml
<CustomField>
    <fullName>SFA_County__c</fullName>
    <label>SFA - County</label>
    <length>200</length>
    <type>Text</type>
</CustomField>