force-app/main/default/objects/Lead/fields/SFA_Downpayment__c.field-meta.xml
<CustomField>
    <fullName>SFA_Downpayment__c</fullName>
    <label>SFA - Downpayment</label>
    <length>40</length>
    <type>Text</type>
</CustomField>