force-app/main/default/objects/Lead/fields/SFA_Employer_Phone__c.field-meta.xml
<CustomField>
    <fullName>SFA_Employer_Phone__c</fullName>
    <label>SFA - Employer Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>