force-app/main/default/objects/Lead/fields/SFA_Employer_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>SFA_Employer_Zip_Postal_Code__c</fullName>
    <label>SFA - Employer Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>