force-app/main/default/objects/Lead/fields/SFA_Male_Female__c.field-meta.xml
<CustomField>
    <fullName>SFA_Male_Female__c</fullName>
    <label>SFA - Male/Female</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>