force-app/main/default/objects/Lead/fields/SFA_Martial_Status__c.field-meta.xml
<CustomField>
    <fullName>SFA_Martial_Status__c</fullName>
    <label>SFA - Martial Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Not married</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>