force-app/main/default/objects/Lead/fields/SFA_Middle_Names__c.field-meta.xml
<CustomField>
    <fullName>SFA_Middle_Names__c</fullName>
    <label>SFA - Middle Names</label>
    <length>200</length>
    <type>Text</type>
</CustomField>