force-app/main/default/objects/Lead/fields/SFA_Model_Year__c.field-meta.xml
<CustomField>
    <fullName>SFA_Model_Year__c</fullName>
    <label>SFA - Model Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>