force-app/main/default/objects/Lead/fields/SFA_Monthly_Rent_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>SFA_Monthly_Rent_Mortgage__c</fullName>
    <label>SFA - Monthly Rent/Mortgage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>