force-app/main/default/objects/Lead/fields/SFA_Mortgage_Balance__c.field-meta.xml
<CustomField>
    <fullName>SFA_Mortgage_Balance__c</fullName>
    <label>SFA - Mortgage Balance</label>
    <length>40</length>
    <type>Text</type>
</CustomField>