force-app/main/default/objects/Lead/fields/SFA_Name_of_first_bank__c.field-meta.xml
<CustomField>
    <fullName>SFA_Name_of_first_bank__c</fullName>
    <label>SFA - Name of first bank</label>
    <length>200</length>
    <type>Text</type>
</CustomField>