force-app/main/default/objects/Lead/fields/SFA_Occupation__c.field-meta.xml
<CustomField>
    <fullName>SFA_Occupation__c</fullName>
    <label>SFA - Occupation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>