force-app/main/default/objects/Lead/fields/SFA_Other_Income_Frequency__c.field-meta.xml
<CustomField>
    <fullName>SFA_Other_Income_Frequency__c</fullName>
    <label>SFA - Other Income Frequency</label>
    <length>200</length>
    <type>Text</type>
</CustomField>