force-app/main/default/objects/Lead/fields/SFA_Previous_State__c.field-meta.xml
<CustomField>
    <fullName>SFA_Previous_State__c</fullName>
    <label>SFA - Previous State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>