force-app/main/default/objects/Lead/fields/SFA_Previous_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>SFA_Previous_Street_Address__c</fullName>
    <label>SFA - Previous Street Address</label>
    <type>TextArea</type>
</CustomField>