force-app/main/default/objects/Lead/fields/SFA_Previous_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>SFA_Previous_Zip_Postal_Code__c</fullName>
    <label>SFA - Previous Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>