force-app/main/default/objects/Lead/fields/SFA_Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>SFA_Property_Owner__c</fullName>
    <label>SFA - Property Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>