force-app/main/default/objects/Lead/fields/SFA_Second_Reference_State__c.field-meta.xml
<CustomField>
    <fullName>SFA_Second_Reference_State__c</fullName>
    <label>SFA - Second Reference State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>