force-app/main/default/objects/Lead/fields/SFA_Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>SFA_Social_Security_Number__c</fullName>
    <label>SFA - Social Security Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>