force-app/main/default/objects/Lead/fields/SFA_Third_Reference_Phone__c.field-meta.xml
<CustomField>
    <fullName>SFA_Third_Reference_Phone__c</fullName>
    <label>SFA - Third Reference Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>