force-app/main/default/objects/Lead/fields/SFA_Years_at_employer__c.field-meta.xml
<CustomField>
    <fullName>SFA_Years_at_employer__c</fullName>
    <label>SFA - Years at employer</label>
    <length>4</length>
    <type>Text</type>
</CustomField>