force-app/main/default/objects/Lead/fields/Trade_Value_Your_Boat_Added_Accessorie__c.field-meta.xml
<CustomField>
    <fullName>Trade_Value_Your_Boat_Added_Accessorie__c</fullName>
    <label>Trade Value - Your Boat Added Accessorie</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>