force-app/main/default/objects/Lead/fields/Trade_Value_Your_Boat_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Trade_Value_Your_Boat_Manufacturer__c</fullName>
    <label>Trade Value - Your Boat Manufacturer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>