force-app/main/default/objects/Lead/fields/Trade_Value_Your_Boat_Year__c.field-meta.xml
<CustomField>
    <fullName>Trade_Value_Your_Boat_Year__c</fullName>
    <label>Trade Value - Your Boat Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>