force-app/main/default/objects/Lead/fields/Your_Boat_Engine_Hours__c.field-meta.xml
<CustomField>
    <fullName>Your_Boat_Engine_Hours__c</fullName>
    <label>Your Boat Engine Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>