force-app/main/default/objects/Lead/fields/Your_Boat_Year__c.field-meta.xml
<CustomField>
    <fullName>Your_Boat_Year__c</fullName>
    <label>Your Boat Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>