force-app/main/default/objects/Lead/fields/Your_HIN_Number__c.field-meta.xml
<CustomField>
    <fullName>Your_HIN_Number__c</fullName>
    <label>Your HIN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>